# eng-rs

./: Cargo.toml
resources/shaders/: picking_shader.wgsl  shader.wgsl
src/: main.rs  shader.wgsl
src/engine/app/: mod.rs  texture_manager.rs
src/engine/app/game/: mod.rs
src/engine/app/game/components/: label.rs  mod.rs  position.rs  script.rs  sprite.rs  transform.rs
src/engine/app/renderer/: camera.rs  egui_tools.rs  mod.rs  render_data.rs  texture.rs
