[package]
name = "eng-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = {version = "1.23.0", features=["derive"]}
cgmath = "0.18.0"
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
egui_demo_lib = "0.31.1"
env_logger = "0.11"
epi = "0.17.0"
hecs = "0.10.5"
image = {version = "0.25.6"}
pollster = "0.4"
wgpu = "25.0.0"
winit = { version = "0.30.8", features = ["android-native-activity"] }
